# ditherrific

./: Cargo.toml  README.md
.github/workflows/: build_publish.yml  rust.yml
examples/wasm/: index.html  index.js
src/: algorithms.rs  lib.rs
